--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:42to0pOoQ9KK6pfK/XNRbFJqdA0/Ag3tbwMA4DduuBE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=evertec
 DB_USERNAME=root
 DB_PASSWORD=
 
