changes productions last release

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Evertec
 APP_ENV=local
-APP_KEY=base64:42to0pOoQ9KK6pfK/XNRbFJqdA0/Ag3tbwMA4DduuBE=
+APP_KEY=base64:Iee6YIRRYG1RdC+GhobBYh3s6h2hOWEah4sJNhXP6I8=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
